# MailTube

./: .gitignore  .mailtube.env.example  README.md  pyproject.toml
src/mail_tube/: __init__.py  cli.py  config.py  db.py  refresh.py  web.py  youtube.py
tests/: test_core.py
