[project]
name = "mail-tube"
version = "0.1.0"
description = "Less algo slop, more control."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
mail-tube = "mail_tube.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true
